--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,12 @@
 - title: About
   url: /about/
 
+- title: Resume
+  url: /resume/
+
+- title: Publications
+  url: /publications/
+
 - title: Sample Posts
   url: /posts/
 
